# fitness_counter

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  models.py  rep_counter.py
tests/: test_main.py  test_stress.py
